# aoc-2022

./: .pre-commit-config.yaml  requirements-dev.txt  setup.cfg  tox.ini
aoc_2022/: day1.py
scripts/: run.py
tests/: day1_test.py
