[metadata]
name = aoc_2022
version = 0.1.0
description = Advent of Code 2022 Solutions
long_description = file: README.md
long_description_content_type = text/markdown
author = Max Simmons
author_email = max@mxsmns.net

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = true

[coverage:run]
plugins = covdefaults

[flake8]
ignore =
    E501,
    W503
extend_exclude=
    venv

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
